fix title spacing and remove covers from popup

--- a/client/src/css/book.css
+++ b/client/src/css/book.css
@@ -30,13 +30,23 @@
 }
 
 .book-title {
-    font-size: 30px;
+    font-size: 25px;
+    margin-block-end: 0;
+    line-height: 1.2;
+}
+
+.title {
+    line-height: 1.2;
+    margin-block-start: 0;
     margin-block-end: 0;
 }
 
 .author {
     font-size: 20px;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
+
 .book-genre {
     text-transform: lowercase;
     font-size: 20px;
